user page, balance, logo, useLike on user page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
     <div id="app"></div>
     <div class="preloader">
-      <img src="assets/logo/logo.gif" class="rotate" />
+      <img src="./assets/logo/logo.gif" class="rotate" />
     </div>
 
     <script type="module" src="/src/main.jsx"></script>
